--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-/* global style*/
+/* global style
 :root{
     --main-color:white;
     --primary-color:gray;
@@ -21,4 +21,4 @@
   }
   input:focus{
     outline: none;
-  }
+  } */
