--- a/frontend/src/components/Login/style.css
+++ b/frontend/src/components/Login/style.css
@@ -7,7 +7,7 @@
 
 
 
-input[type=text], input[type=password] ,input[type=number]{
+input[type=text], input[type=password] ,input[type=number] [type="email"]{
     width: 100%;
     padding: 15px;
     margin: 5px 0 10px 0 !important;
