contact footer header style

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 /* global style*/
 :root{
-    --main-color:white;
+    --main-color:aqua;
     --primary-color:gray;
   }
   
@@ -8,7 +8,8 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'fira sans','Droid Sans' 'Helvetica Neue', sans-serif;
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'fira sans','Droid Sans' 'Helvetica Neue', sans-serif; */
+    font-family: century;
   }
   
   body{
