--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-/* global style
+/* global style*/
 :root{
     --main-color:aqua;
     --primary-color:gray;
@@ -22,4 +22,4 @@
   }
   input:focus{
     outline: none;
-  } */
+  } 
