--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -1,246 +1,75 @@
 .header {
-    height: 250px;
-    width: 100%;
-    background-color: var(--primary-color);
-    position: relative;
-  }
-  .header-top {
-    display: flex;
-    align-items: center;
+  width: 100%;
+  height: 100px;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  transition: all 1s ease;
+  padding: 0 30px;
+}
+/* logo style*/
+.logo {
+  width: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo-img {
+  width: 60px;
+}
+.logo-text{
+  display: flex;
+  flex-direction: column;
+}
+.logo-text b {
+  color: var(--main-color);
+}
+/*navbar style*/
+.navbar-links{
+  display: flex;
+  align-items: center;
+}
+.navbar-link{
+  margin: 0 17px;
+  font-size: 21px;
+  font-weight: 500;
+  color: white;
+  cursor: pointer;
+}
+.navbar-link:hover{
+  color: var(--main-color);
+}
+/*header Menu style */
+.header-menu{
+  font-size: 40px;
+  cursor: pointer;
+  display: none; /* make it none bc in the laptop screen we dont want it to appear. need it to appear later in another small screens (when dealing with media queries) */
+}
+/* Media Queries*/
+@media (max-width:720px){
+  .header{
     justify-content: space-between;
-    height: 20%;
-    padding: 0 30px;
-    border-bottom: 1px solid var(--main-color);
   }
-  .header-top-menu {
-    display: none;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-    color: var(--main-color);
+  .header-menu{
+    display: block; /* the menu start apear in this width */
   }
-  .header-top-phone,
-  .header-top-text,
-  .header-top-link {
-    font-size: 17px;
-    font-weight: 500;
-    color: snow;
-  }
-  .header-top-link {
-    text-decoration: none;
-    padding: 3px;
-    gap: 16px;
-  }
-  .header-top-phone i,
-  .header-top-link i {
-    margin-right: 4px;
-  }
-  .header-middle {
-    width: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 30px;
-    height: 50%;
-  }
-  .header-middle-logo {
-    color: white;
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    display: flex;
-    align-items: center;
-  }
-  .header-middle-logo i {
-    margin: 0 6px;
-    font-size: 40px;
-  }
-  .header-middle-search-box {
-    width: 70%;
-    background-color: white;
-    height: 60px;
-    border-radius: 50px;
-    overflow: hidden;
-    position: relative;
-  }
-  .header-middle-search-input {
+  .navbar{
+    position: absolute;
+    top: 100%;
+    right: 0;
     width: 100%;
-    height: 100%;
-    border: none;
-    padding-left: 25px;
-    font-size: 24px;
+    background-color:aqua;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); /* this will put the navbar in the most top so we cant see in the screen*/
   }
-  .header-middle-search-box .bi-search {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 10px;
-    font-size: 40px;
-    color: gray;
-  }
-  .header-middle-cart-wrapper {
-    position: relative;
-    text-decoration: none;
-  }
-  .cart-notificatiion {
-    position: absolute;
-    top: 1px;
-    right: -7px;
-    width: 25px;
-    height: 25px;
-    background: red;
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
+  .navbar-links{
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: center;
-    font-size: 18px;
-    text-decoration: none;
-  
+    padding-left: 50px;
   }
-  .header-middle-cart-wrapper i {
-    font-size: 44px;
-    color: white;
-    cursor: pointer;
-    text-decoration: none;
-  
+  .navbar-link{
+    margin: 15px 0;
   }
-  .navbar {
-    background-color: var(--main-color);
-    box-shadow: 0 0 1px gray;
-    height: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .navbar-links {
-    display: flex;
-    align-items: center;
-    height: 100%;
-  }
-  .navbar-link {
-    padding: 0 20px;
-    font-size: 21px;
-    font-weight: 600;
-    color: #525452;
-    cursor: pointer;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    font-family: century;
-  }
-  .navbar-link:hover {
-    background-color:  var(--primary-color);
-  }
-  /*media Queries*/
-  @media (max-width: 990px) {
-    .header-middle-search-box {
-      width: 600px;
-    }
-  }
-  @media (max-width: 920px) {
-    .header-middle-search-box {
-      width: 450px;
-    }
-    .header-top-text {
-      font-size: 17px;
-    }
-    .header-middle-logo {
-      font-size: 17px;
-      font-weight: 400;
-    }
-  }
-  @media (max-width: 720px) {
-    .header-top-text {
-      display: none;
-    }
-    .header-top-menu {
-      display: block;
-    }
-    .header-middle {
-      flex-wrap: wrap;
-      padding: 0 30px;
-      height: 80%;
-    }
-    .header-middle-search-box {
-      width: 100%;
-    }
-    .header-middle-logo {
-      display: none;
-    }
-    .navbar {
-      position: fixed;
-      top: 50px;
-      left: -300px;
-      width: 300px;
-      height: 100vh;
-      align-items: flex-start;
-      z-index: 999;
-      transition: all 1s ease;
-    }
-    .navbar-links {
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      height: max-content;
-      width: 100%;
-    }
-    .navbar-link {
-      width: 100%;
-      padding: 30px;
-    }
-    .header-top-link {
-      font-size: 22px;
-      padding: 4px;
-    }
-  }
-  @media (max-width: 520px) {
-    .header-middle,
-    .header-top {
-      padding: 0 15px;
-    }
-    .header-top-phone {
-      font-size: 20px;
-    }
-    
-  
-    .header-top-link {
-      font-size: 15px;
-      padding: 1px;
-    }
-    .header-middle-search-input {
-      font-size: 18px;
-    }
-  }
-  /*drop down */
-
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    font-size: 21px;
-    font-weight: 600;
-    color: #525452;
-    cursor: pointer;
-    /* height: 100%; */
-    font-family: century;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1
-
- 
-
-  }
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-
- 
+}
