--- a/frontend/src/components/NeedyByUserid/style.css
+++ b/frontend/src/components/NeedyByUserid/style.css
@@ -17,6 +17,7 @@ width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr; 
     border: 2px rgb(122, 137, 141) solid;
+    height: 200px;
 }
 
 .firstmone{
@@ -24,4 +25,9 @@ width: 100%;
     grid-template-columns: 1fr 1fr; 
     border: 2px red solid;
     border: 2px rgb(122, 137, 141) solid;
+    height: 200px;
+}
+.imgCategory{
+height: 200px;
+
 }
