--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,11 @@
 /* global style*/
 :root{
-  --main-color:#f5f5f5;
+  --main2-color:#f5f5f5;
   --primary-color:gray;
+  /* --bg-color:#222327;
+  --text-color:#fff;
+  --main-color:#29fd53; */
+
 }
 
 *{
