--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -1,13 +1,14 @@
 .header {
   width: 100%;
   height: 100px;
-  background-color: var(--primary-color);
+  background-color: #efefef;
   display: flex;
   align-items: center;
   justify-content: space-around;
   position: relative;
   transition: all 1s ease;
-  padding: 0 30px;
+  padding: 0 7px;
+  /* padding: 0 30px; */
 }
 /* logo style*/
 .logo {
@@ -34,24 +35,47 @@
   display: flex;
   flex-direction: column;
 }
+.header-middle-logo{
+  text-decoration: none;
+}
 .logo-text b {
-  color: var(--main-color);
+  /* color: var(--main-color); */
+  color: #545454;
 }
 /*navbar style*/
 .navbar-links{
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 .navbar-link{
-  margin: 0 17px;
+  margin: 0 15px;
   font-size: 21px;
   font-weight: 500;
-  color: white;
+  color: #545454;
   cursor: pointer;
+  text-decoration: none;
 }
 .navbar-link:hover{
   color: var(--main-color);
 }
+
+/* style login logout*/
+
+.header-top-links-input{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 10px;
+}
+
+.header-top-link {
+  font-size: 22px;
+  padding: 4px;
+  text-decoration: none;
+  color: #545454;
+}
+
 /*header Menu style */
 .header-menu{
   font-size: 40px;
