--- a/frontend/src/components/NeedyByUserid/style.css
+++ b/frontend/src/components/NeedyByUserid/style.css
@@ -8,7 +8,7 @@ width: 100%;
  .secandMmainMonyDispayCatigory{
 
     display: grid;
-   
+    grid-template-columns: 1fr 1fr;
     width: 100%; 
   gap: 5%;
 } 
@@ -28,6 +28,6 @@ width: 100%;
     height: 200px;
 }
 .imgCategory{
-height: 200px;
+height: 195px;
 
 }
