--- a/frontend/src/components/Contact/contact.css
+++ b/frontend/src/components/Contact/contact.css
@@ -1,98 +1,140 @@
-/*pt:1  Contact Us Form*/
-.contact{
-    min-height: calc(100vh - 250px);
-    padding: 30px;
-}
-.contact-wrapper{
-    margin-bottom: 20px;
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;500;600;700&family=Josefin+Sans:wght@300&family=Montserrat:wght@100&family=Poppins:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+.contact-body{
+    font-family: "poppins", sans-serif;
+    min-height: 100Vh;
+    background: url('https://res.cloudinary.com/dqsg0zf1r/image/upload/v1668097554/samples/project%205/fitrat_iNsan_wn8qlh.png');
+    background-size: cover;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    border-bottom: 1px solid gray;
-    padding-bottom: 15px;
-}
-.contact-item{
-    width: 31%;
-    margin: 0 5px;
-}
-.contact-item-icon{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    font-size: 30px;
-    color: var(--primary-color);
-    margin-bottom: 15px;
-}
-.contact-item-text{
-    font-size: 21px;
-    color: #222;
-    text-align: center;
-}
-/*pt:2  Contact Us Form*/
-.contact-form{
-    margin-top: 30px;
-}
-.contact-form-title{ 
-    text-align: center;
-    color: white;
-}
-.contact-input-wrapper{ 
-    margin: 15px 0;
-    display: flex;
     align-items: center;
-    justify-content: space-between;
 }
-.contact-input-wrapper input{
-    width: 31%;
-    height: 50px;
-    font-size: 21px;
-    padding: 5px 10px;
-    border: 2px solid gray;
-}
-.contact-textarea{
+.contact-section{
     width: 100%;
-    border: 2px solid gray;
-    resize: none;
-    font-size: 21px;
-    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.contact-btn{
-    background: var(--primary-color);
-    color: white;
-    font-weight: 500;
-    cursor: pointer;
-    padding: 5px 10px;
+.contact-info{
+    color: #fff;
+    max-width: 500px;
+    line-height: 65px;
+    padding-left: 50px;
+    font-size: 18px;
+}
+.contact-info i{
+    margin-right: 20px;
+    font-size: 25px;
+}
+.contact-form{
+    max-width: 700px;
+    margin-right: 50px;
+}
+.contact-info, .contact-form{
+    flex: 1;
+}
+.contact-form h2{
+    color: #fff;
+    text-align: center;
+    font-size: 35px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+.contact-form .text-boxx{
+    background: #000;
+    color: #fff;
     border: none;
-    margin-top: 15px;
-    font-size: 21px;
-    border-radius: 10px;
+    width: calc(50% - 10px);
+    height: 50px;
+    padding: 12px;
+    font-size: 15px;
+    border-radius: 5px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    opacity: 0.9;
 }
-/*Media Queries*/
-@media(max-width:720px){
-    .contact{
-        padding: 30px 15px;
-    }
-    .contact-input-wrapper{
-        flex-wrap: wrap;
-    }
-    .contact-input-wrapper input{
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .contact-item-icon{
-        font-size: 25px;
-    }
+.contact-form .text-boxx:first-child{
+    margin-right: 15px;
 }
-@media(max-width:520px){
-    .contact-wrapper{
-        flex-wrap: wrap;
+.contact-form textarea{
+    background: #000;
+    color: #fff;
+    border: none;
+    width: 100%;
+    padding: 12px;
+    font-size: 15px;
+    min-height: 200px;
+    max-height: 400px;
+    resize: vertical;
+    border-radius: 5px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    opacity: 0.9;
+    resize: none;
+}
+.contact-form .send-btn{
+    background: white;
+    padding: 20px 32px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #111111;
+    border: none;
+    outline: none;
+    box-shadow: 0px 16px 32px 0px rgb(0 0 0 /6%);
+    border-radius: 5px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    float: right;
+}
+.contact-form .send-btn:hover{
+    /* background: #545454; */
+    background-color: #292929;
+    color: white;
+    transition: .3s;
+    cursor: pointer;
+}
+.contact-form .send-btn{
+    background: #111111;
+    color: white;
+}
+/* ALERT MESSAGE SUCCESS*/
+.alert-success{
+    z-index: 1;
+    background: #D4EDDA;
+    font-size: 18px;
+    padding: 20px 40px;
+    min-width: 420px;
+    position: fixed;
+    right: 0;
+    top: 10px;
+    border-left: 8px solid #3ad66e;
+    border-radius: 4px;
+}
+/* ALERT MESSAGE ERROR*/
+.alert-error{
+    z-index: 1;
+    background: #FFF3CD;
+    font-size: 18px;
+    padding: 20px 40px;
+    min-width: 420px;
+    position: fixed;
+    right: 0;
+    top: 10px;
+    border-left: 8px solid #FFA502;
+    border-radius: 4px;
+}
+/*MEDIA QUERIES*/
+@media (max-width:950px){
+    .contact-section{
+        flex-direction: column;
     }
-    .contact-item{
+    .contact-info, .contact-form{
+        margin: 30px 50px;
+    }
+    .contact-form h2{
+        font-size: 30px;
+    }
+    .contact-form .text-boxx{
         width: 100%;
-        margin-bottom: 30px;
-    }
-    .contact-item-icon{
-        font-size: 40px;
     }
 }
