--- a/frontend/src/components/Category/style.css
+++ b/frontend/src/components/Category/style.css
@@ -54,13 +54,13 @@ height: 100%;
   }
   .reservationH1{
     /* background-color: rgba(255, 187, 0, 0.87) ; */
-    background-color:#636334;
+    background-color:#4834637a;
     margin: 4% !important
   }
   
   /* Add padding to containers */
   .containerr {
-    border: 5px #b3970e solid;
+    border: 5px    pink solid;
     gap: 2px;
     border-radius: 40px;
     /* padding: 16px; */
@@ -99,7 +99,7 @@ height: 100%;
 
   .paging{
 margin-bottom: 5%;
-background-color:#3fbbc0;
+background-color:pink;
 color: white;
 padding: 16px 20px;
 /* margin: 8px 0; */
@@ -120,7 +120,7 @@ border-bottom-right-radius:36px ;
   
   /* Set a style for the submit button */
   .registerbtnadd {
-    background-color:#b3970e;
+    background-color:pink;
     color: white;
     padding: 16px 20px;
     /* margin: 8px 0; */
