--- a/frontend/src/components/Register/style.css
+++ b/frontend/src/components/Register/style.css
@@ -37,9 +37,9 @@ input[type=text], input[type=password] ,input[type=number],input[type="email"]{
     opacity: 0.9;
   }
 
-  .imglogin{
+  .imgRegister{
     width: 100%;
-    height: 100%;
+    height: 567px;
     
      }
 
