--- a/frontend/src/components/InterfaceHeader/interfaceHeader.css
+++ b/frontend/src/components/InterfaceHeader/interfaceHeader.css
@@ -2,7 +2,9 @@
     /* background: url(./assets/images/pic3.png);  */
     /* background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTssM6QpTo5OihQoKsG-VqSAfuVOk3Hjxa8Cw&usqp=CAU") no-repeat; */
     /* background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0N01pf13TjrY524osbD9Cy_o1EVmrWhMyOQ&usqp=CAU") no-repeat; */
-    background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj2t2CT7g1ly6sBm96zRxS6qta8GJw7_Cxww&usqp=CAU") no-repeat;
+    /* background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj2t2CT7g1ly6sBm96zRxS6qta8GJw7_Cxww&usqp=CAU") no-repeat; */
+    background: url("https://i.pinimg.com/236x/46/b0/9a/46b09a6ff9272abf2be532394d105064.jpg") no-repeat;
+    
     background-size: cover; /*mean 100%*/
     width: 100%;
     height: calc(100vh-100px); /* by using method calc to Subtract the header from  background area*/
