--- a/frontend/src/components/OurTeam/ourTeam.css
+++ b/frontend/src/components/OurTeam/ourTeam.css
@@ -44,7 +44,7 @@
     box-shadow: 0 0 2.2em rgba(25,0,58,0.15);
     padding: 3.5em 1em;
     border-radius: 0.6em;
-    color: #1f003b;
+    color: #6B6F69; /*#1f003b*/
     cursor: pointer;
     transition: 0.3s;
     background-color: #ffffff;
@@ -52,7 +52,7 @@
 .card .img-container{
     width: 8em;
     height: 8em;
-    background-color: #a993ff;
+    background-color: #BFB8B7;/*#a993ff*/
     padding: 0.5em;
     border-radius: 50%;
     margin: 0 auto 2em auto;
@@ -83,7 +83,7 @@
     font-size: 1.4em;
 }
 .card:hover{
-    background: linear-gradient(#6045ea,#8567f7);
+    background: linear-gradient(#6E726D,#BFB8B7) ;/*(#6045ea,#8567f7);*/
     color: #ffffff;
 }
 .card:hover .img-container {
