--- a/frontend/src/components/DashboardAdmin/style.css
+++ b/frontend/src/components/DashboardAdmin/style.css
@@ -1,16 +1,112 @@
-.admin_panal{
-    display: grid;
-    grid-template-columns: 11rem auto 20rem;
-    border-radius: 2%;
-    height: 97%;
-    width: 97%;
-    overflow: hidden;
-}
 
+/* 
 .admin_board{
     color: #fff; 
     width:20vw;
     
     height: 60vh;;
+    } */
+   .admin_panal{
+    /* background: linear-gradient(
+        106.37deg,
+        #ffe1bc 29.63%,
+        #ffcfd1 51.55%,
+        #F8BDC1 90.85%
+      ); */
+      background-color: #EEEEEE;
+
+      border-radius: 2px;
+      height: 100%;
+      /* display: flex;
+      align-items: center;
+      justify-content: center; */
+   }
+   .container_panel{
+    display: grid;
+    height: 97%;
+    width: 97%;
+    border-radius: 2rem;
+    gap: 16px;
+    grid-template-columns: 11rem auto 10rem;
+    overflow: hidden;
+    border-radius: 2px;
+
+  }
+  .slid {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding-top: 4rem;
+    background-color: #040807;
+    color: #fff;
+  }
+  .menuItem:hover {
+    cursor: pointer;
+  }
+  
+  .menu .menuItem:last-child {
+    position: absolute;
+    bottom: 2.3rem;
+    width: 100%;
+  }
+  
+  .active {
+    background:#f799a354;
+    margin-left: 0;
+  }
+  .active::before {
+    content: "";
+    width: 8px;
+    height: 100%;
+    background: #FF919D;
+    margin-right: calc(1rem - 8px);
+  }
+  .chart{
+    height: 50vh;
+   width: 30vw;
+  }
+  .pie_chart
+  {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+  }
+  table {
+    width:100%;
+    border-collapse: collapse;
+    height: 100vh;;
+      }
+      table th{
+          font-size: calc(0.5rem+0.5vh);
+          background-color:#080708;
+          /* background-color: #1E3888; */
+          color: #fff;
+          text-align: center;
+          padding: 20px;
+     
+    
+        }
+    table td {
+      text-align:center;
+      padding: 15px;
+      /* height: 100px;
+      border:2px solid #000; */
+    
     }
-   
+    table tr:hover{
+      background-color:#F7F7F9;
+      background-color: #1E3888;
+      /* background-color: #E60B63; */
+      color: #fff;
+    }
+    
+    tr:nth-child(even)
+     {background-color:#FFF3F0;
+      background-color: #fde8e9;
+    }
+    
+    
+    
+    .container_admin_dash{
+    }    
+    
