--- a/frontend/src/components/Navigation/style.css
+++ b/frontend/src/components/Navigation/style.css
@@ -3,9 +3,10 @@
 .header {
     height: 6vh;
     background-color:#080708;
-    opacity:0.9;
+    background-color:#847D7D; 
+    ;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding-top: 5px;
   }
@@ -32,15 +33,18 @@
   font-family:'Roboto', sans-serif;
   font-weight: 500;
   font-size: calc(1rem + 0.8vw);
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 2fr 1fr ;
   justify-content: center;
   align-items: center;
   column-gap: 2vw;
   }
-  .linkhome  a , .logout ,.logout{
+ a{
     color: #fff; 
     /* color: #847D7D; */
     /* color:  #FF2E21; */
+    color:#382B2C;
+    color: #785B5D;
+    color: #664E4F;
   text-decoration: underline;
   justify-content: center;
   align-self: center;
