--- a/frontend/src/components/Category/style.css
+++ b/frontend/src/components/Category/style.css
@@ -77,7 +77,7 @@ height: 100%;
   color: #E3E36A;
     
   }
-  /* Full-width input fields */
+  /* Full-width input fields
   input[type=text], input[type=password] {
     width: 100%;
     padding: 15px;
@@ -85,17 +85,17 @@ height: 100%;
     display: inline-block;
     border: none;
     background: #f1f1f1;
-  }
+  } */
   .pw{
     background-color: azure;
     text-align: left;
    margin: 1%;
    height: 110px;
   }
-  input[type=text]:focus, input[type=password]:focus {
+  /* input[type=text]:focus, input[type=password]:focus {
     background-color: #ddd;
     outline: none;
-  }
+  } */
 
   .paging{
 margin-bottom: 5%;
