--- a/frontend/src/components/Register/style.css
+++ b/frontend/src/components/Register/style.css
@@ -5,19 +5,19 @@ width: 95%;
 
 }
 
-input[type=text], input[type=password] ,input[type=number],input[type="email"]{
+/* input[type=text], input[type=password] ,input[type=number],input[type="email"]{
     width: 100%;
     padding: 15px;
     margin: 5px 0 10px 0 !important;
     display: inline-block;
     border: none;
     background: #f1f1f1;
-  }
+  } */
   
-  input[type=text]:focus, input[type=password]:focus {
+  /* input[type=text]:focus, input[type=password]:focus {
     background-color: #ddd;
     outline: none;
-  }
+  } */
   
   /* Overwrite default styles of hr */
   hr {
