--- a/frontend/src/components/CreateDonation/style.css
+++ b/frontend/src/components/CreateDonation/style.css
@@ -71,17 +71,18 @@ span{
   align-items: center;
   background-color: #fff;
   margin-bottom: 15vh;
-  height: 220vh;
+  height: 130vh;
 }
 .adddonate{
   width: 80vw;
-  height:150vh;
+  height:130vh;
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 3vh;
  border: #6E726D solid 3px;
+ padding-top: 12vh;
 }
 .input {
   padding: 1.9vh;
@@ -104,16 +105,16 @@ font-size: calc(0.5rem + 0.8vw);
 margin-bottom: 3vh;
 }
 .img_donat img {
-  width: 40vw;
+  width: 50vw;
   display: block;
-  height: 80vh;
+  height: 100vh;
 }
 .case_needy{
   display: grid;
   grid-template-columns: 1fr 1fr;
   font-family: "Roboto", sans-serif;
   gap: 3vh;
-  height:90vhl
+  height:90vh;
 
 
 }
@@ -123,48 +124,6 @@ width:15vw;
 .true{
   background-color: rgb(33, 224, 74);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.container-donate {
-  display: flex;
-  justify-content: space-between;
-  justify-content: center;
-  align-items: center;
-  height: 80vh;
-  background-color: #fff;
-}
-.adddonate{
-  width: 50vw;
-  height: 80vh;
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 3vh;
-}
-
-  
 .img_donate img {
   width: 60vw;
   display: block;
