--- a/frontend/src/components/Socket/Socket.css
+++ b/frontend/src/components/Socket/Socket.css
@@ -39,7 +39,7 @@
     margin: 5px 0 10px 0 !important;
     display: inline-block;
     border: none;
-    background: #f1f1f1;
+    background: #4a4343;
 }
 .nsegesdiv{
     border: rgba(17, 21, 11, 0.817) 10px solid;
