--- a/frontend/src/components/FAQs/FAQs.css
+++ b/frontend/src/components/FAQs/FAQs.css
@@ -4,6 +4,7 @@
     width: 100vw;
     justify-content: center;
     align-items: center;
+    
 }
 .FAQs-map-title-answer{
     width: 500px;
@@ -13,16 +14,19 @@
     background: #f0ebe1;
     margin-bottom: 5px;
     padding: 10px 20px;
+    background-color: #efefef;
+
 }
 .title{
-    color: #555149;
+    color: #545454;
     display: flex;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
 }
 .answer{
-    color: #8b7f75;
+    /* color: #8b7f75; */
+    color: gray;
     min-height: 0;
     overflow: hidden;
     transition: all 0.5s cubic-bezier(0,1,0,1);
