--- a/frontend/src/components/Navigation/style.css
+++ b/frontend/src/components/Navigation/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Satisfy&display=swap');
 
-.header {
+.header2 {
     height: 6vh;
     background-color:#080708;
     background-color:#847D7D; 
