add mailjs to form contact and add function to admin

--- a/frontend/src/components/CreateDonation/style.css
+++ b/frontend/src/components/CreateDonation/style.css
@@ -87,10 +87,10 @@ span{
 .input {
   padding: 1.9vh;
   margin-bottom: 3vh;
-  width:5vw;
+  width:10vw;
   border-radius: 2%;
   border: 3px solid #ccc;
-  font-size: calc(0.5rem + 0.8vw);
+  font-size: calc(1.14rem + 0.4vw);
 }
 
 .button {
@@ -98,8 +98,12 @@ span{
   margin-top: 3vh;
   padding: 2vh;
   border-radius: 4%;
-border: #e60b63;
-background-color:#e60b63;
+/* border: #e60b63; */
+border: #FF1616;
+/* background-color:#e60b63; */
+background-color: #FF1616;
+border-color:#F94F5A;
+background-color: #F26E7C;
 color: #fff;
 font-size: calc(0.5rem + 0.8vw);
 margin-bottom: 3vh;
@@ -114,12 +118,13 @@ margin-bottom: 3vh;
   grid-template-columns: 1fr 1fr;
   font-family: "Roboto", sans-serif;
   gap: 3vh;
-  height:90vh;
+  height:auto;
 
 
 }
 .img_case{
 width:15vw;
+height: 23vh;
 }
 .true{
   background-color: rgb(33, 224, 74);
@@ -134,4 +139,21 @@ width:15vw;
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 23vw;
+}
+.info_case{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.img_for_donat{
+  height: 20vh;
+  width: 20vh;
+}
+.for_donat
+{
+  opacity: 0.8;
+  border: #F26E7C 4px dashed;
+  display: flex;
+  flex-direction: column;
+
 }
