--- a/frontend/src/components/Socket/Socket.css
+++ b/frontend/src/components/Socket/Socket.css
@@ -5,7 +5,9 @@
     
    
 }
-
+.bhbh{
+    background-color: blanchedalmond;
+}
 .SOCITSYLE{
     display: flex;
     flex-direction: column;
@@ -40,6 +42,13 @@
     display: inline-block;
     border: none;
     background: #4a4343;
+}
+.add{
+    background-color: red;
+    
+}
+.bbb{
+    background-color: black;
 }
 .nsegesdiv{
     border: rgba(17, 21, 11, 0.817) 10px solid;
