--- a/frontend/src/components/CardCategory/homecardcategory.css
+++ b/frontend/src/components/CardCategory/homecardcategory.css
@@ -65,6 +65,14 @@ span{
     visibility: visible;
 }
 
+.header-cardcategory h1{
+    text-align: center !important;
+    position: relative;
+margin-top: 22px;
+left: 35%;
+color: #000;
+}
+
 
 
 
