--- a/frontend/src/components/Category/style.css
+++ b/frontend/src/components/Category/style.css
@@ -1,82 +1,71 @@
-.categoySHOW{
+/* .categoySHOW{
     display: grid;
     grid-template-columns: 1fr 1fr;
-
-}
+} */
 /* .imgaCategory{
     width: 100%;
     height: 200px;
 } */
 
-h3{
+/* h3{
     text-align: center;
-}
+} */
 
 
 /* h1{
     color: aliceblue;
 } */
-.DivCate{
+/* .DivCate{
     color: black ;
     background: white !important;
     display: grid;
     grid-template-columns:1fr 1fr ;
-    flex-wrap: wrap;
-    
-}
-.divSpicItem{
+    flex-wrap: wrap; 
+} */
+/* .divSpicItem{
 margin: 10px;
     border: black 2px solid;
 align-items: center;
     height: 50px;
-}
-body {
+} */
+/* body {
     font-family: Arial, Helvetica, sans-serif;
-    /* background-color: black; */
-  }
+  } */
    
- .mainIntroDev{
+ /* .mainIntroDev{
     display: flex;
-
- }
- .imgregester{
-/* width: 300px; */
+ } */
+ /* .imgregester{
 height: 100%;
-
- }
+ } */
  /* .imgReg{
     width: 300px;
     height: 1100px;
 
  } */
-  * {
-    box-sizing: border-box;
-  }
-  .reservationH1{
-    /* background-color: rgba(255, 187, 0, 0.87) ; */
+ 
+  /* .reservationH1{
     background-color:#4834637a;
     margin: 4% !important
-  }
+  } */
   
   /* Add padding to containers */
-  .containerr {
+  /* .containerr {
     border: 5px    pink solid;
     gap: 2px;
     border-radius: 40px;
-    /* padding: 16px; */
     background-color: white;
     width: 80%;
     margin-bottom: 2%;
     gap: 1%;
-  }
-  .imgCatiegory{
+  } */
+  /* .imgCatiegory{
     width:100%;
     height: 200px;
-  }
-  .imgCatiegory:hover{
-  color: #E3E36A;
-    
-  }
+  } */
+  /* .imgCatiegory:hover{
+  color: #E3E36A; 
+  } */
   /* Full-width input fields
   input[type=text], input[type=password] {
     width: 100%;
@@ -86,58 +75,51 @@ height: 100%;
     border: none;
     background: #f1f1f1;
   } */
-  .pw{
+  /* .pw{
     background-color: azure;
     text-align: left;
    margin: 1%;
    height: 110px;
-  }
+  } */
   /* input[type=text]:focus, input[type=password]:focus {
     background-color: #ddd;
     outline: none;
   } */
-
+/* 
   .paging{
 margin-bottom: 5%;
 background-color:pink;
 color: white;
 padding: 16px 20px;
-/* margin: 8px 0; */
 font-size: 100%;
 border: none;
 cursor: pointer;
 width: 10%;
-/* opacity: 0.9; */
 border-top-left-radius: 36px;
 border-bottom-right-radius:36px ;
-  }
+  } */
   
   /* Overwrite default styles of hr */
-  hr {
+  /* hr {
     border: 1px solid #f1f1f1;
     margin-bottom: 25px;
-  }
+  } */
   
   /* Set a style for the submit button */
-  .registerbtnadd {
+  /* .registerbtnadd {
     background-color:pink;
     color: white;
     padding: 16px 20px;
-    /* margin: 8px 0; */
     font-size: 100%;
     border: none;
     cursor: pointer;
     width: 100%;
-    /* opacity: 0.9; */
 border-bottom-left-radius: 36px;
 border-bottom-right-radius:36px ;
-
-  }
+  } */
   .registerbtnadd:hover{
-
     color: #E3E36A;
     opacity: 0.7;
-/* font-size: large; */
   }
   .registerbtn:hover {
 color: #E3E36A;
@@ -155,9 +137,9 @@ color: white;
   }
   
   /* Add a blue text color to links */
-  a {
+  /* a {
     color: dodgerblue;
-  }
+  } */
   
   /* Set a grey background color and center the text of the "sign in" section */
   .signin {
@@ -168,3 +150,4 @@ color: white;
 color:  dodgerblue !important;
     margin: 0;
   }
+ 
