--- a/frontend/src/components/ApiPganation/styleApi.css
+++ b/frontend/src/components/ApiPganation/styleApi.css
@@ -55,3 +55,154 @@
     color: rgb(13, 7, 7);
     background-color: rgb(7, 4, 4);
   }
+
+
+
+  /*start style with book card*/
+.books_container{
+  margin: 0;
+  padding: 0;
+  box-shadow: border-box;
+  font-size: 1.7rem;
+  font-family: 'Merriweather Sans' ,sans-serif;
+   background:white; /* linear-gradient(45deg,#fbda61,#b14219) ; */
+  color: #eceece;
+  padding: 3rem;
+}
+.books h2{
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: 4rem;
+}
+.books h3{
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: 3rem;
+}
+.all_books{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* display: inline-block; */
+  /* float: inline-start; */
+}
+.book{
+  overflow: hidden;
+  background:#ffffff;
+  color: #21201e;
+  text-align: center;
+  width: 375px;
+  height: 450px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  border-radius: 1.2rem;
+  margin: 1rem;
+}
+.book:hover img{
+  scale: 1.1;
+}
+.book:hover{
+  box-shadow: 5px 15px 25px #eeeeee;
+}
+.book img{
+  height: 200px;
+  margin: 1rem;
+  transform: all 0.3s;
+}
+.book .book_btn{
+  color: #eceece;
+  display: inline-block;
+  text-decoration: none;
+  background:linear-gradient(45deg,#fbda61,#FF5757);
+  padding: 1.2rem 3rem;
+  border-radius: 1rem;
+  margin-top: 1rem;
+  transform: all 0.2s;
+  font-size: 19px;
+  border: none;
+}
+.book .book_btn:hover{
+  transform: scale(1.1);
+} 
+
+
+
+
+
+
+
+
+
+
+
+/* .maimpagination {
+    display: grid;
+    grid-template-columns: 1fr 1fr  ;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    width: 100vw;
+  }
+  
+  .user {
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: #ecae44;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
+    height: 300px;
+    margin: 20px;
+  }
+  .imageAPIE{
+    height: 200PX;
+    width: 100%;
+  } */
+
+
+
+
+
+
+
+
+
+
+  .paginationBttns {
+    width: 80%;
+    height: 40px;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .paginationBttns a {
+    padding: 10px;
+    margin: 8px;
+    border-radius: 5px;
+    border: 1px solid #ff802b;
+    color:  #ff802b;
+    cursor: pointer;
+  }
+  
+  .paginationBttns a:hover {
+    color: white;
+    background-color:  #ff802b;
+  }
+  
+  .paginationActive a {
+    color: white;
+    background-color:  #ff802b;
+  }
+  
+  .paginationDisabled a {
+    color: rgb(13, 7, 7);
+    background-color: rgb(7, 4, 4);
+  }
