--- a/frontend/src/components/Socket/Socket.css
+++ b/frontend/src/components/Socket/Socket.css
@@ -103,7 +103,7 @@
 }
 
 .chat-window p {
-  margin: 0;
+  margin: 0%;
 }
 .chat-window .chat-header {
   height: 45px;
@@ -236,3 +236,7 @@
 .hide {
   opacity: 0 !important;
 }
+/* .mainSoketdev{
+
+  background-image: url("./assets/images.pic5.png");
+} */
