--- a/frontend/src/components/DashboardAdmin/style.css
+++ b/frontend/src/components/DashboardAdmin/style.css
@@ -24,7 +24,6 @@
 .body{
   margin: 0;
   padding: 0;
-  font-size: 14px;
   overflow-x: hidden;
   box-sizing: border-box;
 }
@@ -101,18 +100,18 @@ color: var(--color-dark_variant);
     width: 97%;
     margin: 0 auto;
     gap:1.8rem;
-    grid-template-columns: 14rem auto 23rem;
+    /* grid-template-columns: 14rem auto 23rem; */
     grid-template-columns: 14rem auto ;
 
     overflow: hidden;
-    border-radius: 2px; 
+    border-radius: 12px; 
 
   }
 
   .container_a
   {
     height: 100vh;
-    background-color:#fff;
+    /* background-color:#fff; */
   }
  
 .image_admin_logo
@@ -206,12 +205,14 @@ margin-left: 1rem;
 }
 .date
 {
-display: inline-block;
+/* display: inline-block; */
 background-color: var(--color-light);
 border-radius: var(--border-radius-1);
 margin-top: 1rem;
 padding: 0.5rem 1.6rem;
+text-align:left;
 }
+
 .date input[type='date']
 {
   background: transparent;
@@ -313,8 +314,8 @@ box-shadow: none;
 }
 
   .chart{
-    height: 50vh;
-   width: 30vw;
+    height: 40vh;
+   /* width: 30vw;  */
   }
   .pie_chart
   {
@@ -322,43 +323,8 @@ box-shadow: none;
     grid-template-columns: 1fr 1fr 1fr;
     
   }
-  /* table {
-    width:100%;
-    border-collapse: collapse;
-    height: 60vh;;
-      } */
-      /* table th{
-          font-size: calc(0.5rem+0.3vh);
-          background-color:#080708;
-          background-color: #1E3888;
-          color: #fff;
-          text-align: center;
-          padding-top: 20px;
-     
-    
-        } */
-    /* table td {
-      text-align:center;
-      padding: 15px; */
-      /* height: 100px;
-      border:2px solid #000; */
-    
-    /* }
-    table tr:hover{
-      background-color:#F7F7F9;
-      background-color: #1E3888; */
-      /* background-color: #E60B63; */
-      /* color: #fff;
-    }
-    
-    tr:nth-child(even)
-     {background-color:#FFF3F0;
-      background-color: #fde8e9;
-    } */
-    
-    
-    
-    .container_admin_dash{
-    }    
-    
+ .space
+ {
+  height: 20vh;
+ }
    
